--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.52.sec06</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <version>2.1.8.RELEASE</version>
+        </dependency>
 
     </dependencies>
 
