--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -28,3 +28,6 @@ spring.redis.jedis.pool.max-idle=10
 spring.redis.jedis.pool.min-idle=0  
 # 连接超时时间（毫秒）
 spring.redis.jedis.timeout=1000
+
+#热部署生效
+spring.devtools.restart.enabled=true
